--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap'); */
 
 .container {
     background: lightblue;
@@ -95,6 +96,7 @@
     -webkit-user-select: none;
     touch-action: manipulation;
     will-change: transform;
+    background-color: #1A1A1A;
 }
 
 .button:disabled {
