--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -1,5 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Honk&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Honk&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Geologica:wght@100..900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
+
 
 .container {
     background: lightblue;
@@ -9,6 +11,9 @@
     align-items: center;
     height: 100%;
     justify-content: center;
+    font-family: "Yellowtail", sans-serif;
+    background-color: #010a01;
+    background-image: url(https://cdn.pixabay.com/photo/2017/02/12/12/42/wall-2059909_640.png);
 }
 
 
@@ -47,20 +52,20 @@
 }
 
 .transitionsItem {
-    overflow: hidden;
     width: 100%;
-    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
-    font-family: "Honk", system-ui;
-    font-size: 4em;
-    font-weight: 800;
-    text-transform: uppercase;
+    font-family: "Pacifico", system-ui;
+    font-size: 3.5em;
+    font-weight: 300;
+    /* text-transform: uppercase; */
     will-change: transform, opacity, height;
     white-space: nowrap;
     cursor: pointer;
     line-height: 80px;
+    color: #fff;
+    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #f09, 0 0 82px #f09, 0 0 92px #f09, 0 0 102px #f09, 0 0 151px #f09;
 }
 
 
@@ -80,9 +85,9 @@
     box-sizing: border-box;
     color: #3B3B3B;
     cursor: pointer;
-    font-family: "Honk", system-ui;
-    font-size: 30px;
-    font-weight: 600;
+    font-family: "Pacifico", system-ui;
+    font-size: 2em;
+    font-weight: 400;
     line-height: normal;
     margin: 0;
     min-height: 60px;
@@ -96,7 +101,14 @@
     -webkit-user-select: none;
     touch-action: manipulation;
     will-change: transform;
-    background-color: #1A1A1A;
+    /* background-color: #1A1A1A; */
+    color: #fff;
+    text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #f09, 0 0 82px #f09, 0 0 92px #f09, 0 0 102px #f09, 0 0 151px #f09;
+    animation: pulsate 1.5s infinite alternate;
+    border: 0.2rem solid #fff;
+    border-radius: 2rem;
+    padding: 0.4em;
+    box-shadow: 0 0 .2rem #fff, 0 0 .2rem #fff, 0 0 2rem #bc13fe, 0 0 0.8rem #bc13fe, 0 0 2.8rem #bc13fe, inset 0 0 1.3rem #bc13fe;
 }
 
 .button:disabled {
